--- a/coptic/lambdin/index.html
+++ b/coptic/lambdin/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Lambdin (1983)</title>
 		<link rel="stylesheet" href="./styles/styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<h1>Introduction to Sahidic Coptic — Thomas O. Lambdin</h1>
@@ -9418,9 +9419,9 @@
 				<li><span class="coptic">ⲛⲟⲩϩⲙ̄</span> vb. tr. to rescue, save.</li>
 			</ol>
 		</div>
-		<!--
+		
 		<script src="../../scripts/scripts.js"></script>
 		<script src="./scripts/scripts.js"></script>
-		-->
+		
 	</body>
 </html>
