update dictionary editor

--- a/coptic/dictionary_editor/index.html
+++ b/coptic/dictionary_editor/index.html
@@ -37,7 +37,7 @@
 			<div id="editor_text">
 				<fieldset>
 					<legend>Template View</legend>
-					<div id="text_goes_here" contenteditable="true" spellcheck="false" rows="5" placeholder="Type text here…">~co1[ϩⲟⲩⲏⲧ] _d[S]_d[A2], pl ~co[ϩⲟⲩⲁⲧⲉ] _d[S] & sg as pl, nn, _[passenger] on board ship (?): Ex 27 29 ~co[ⲛⲉϩ.] (_d[B] om) ~gr[ἐπιβάτης] (var ~gr[ναύτης]) _[nauta]; P1312 156 ~co[ⲛⲛⲉⲉϥ…ⲙⲛⲛⲉϩ. ⲉⲧⲧⲁⲗⲏⲩ ⲛⲙⲙⲁⲩ] ~gr[ναύ.…ἐπ.], <b>BHom88</b> ship of faith ~co[ⲉⲣⲉⲛⲛⲉⲉϥ ϩⲓⲱⲱϥ] that is clergy, ~co[ⲉⲣⲉⲛⲉϩⲟⲩⲁⲧⲉ ⲧⲁⲗⲏⲩ ⲉⲣⲟϥ] that is Christian folk, ManiP 123 _d[A2] ~co[ⲁⲡⲥⲧⲁⲩⲣⲟⲥ ⲣ ϫⲁⲓ ⲁⲙⲯⲩⲭⲁⲩⲉ ⲣ ϩ.]; P 44 54 ~co[ⲛⲉϩ.] ~ab[قرايا] _[yards] of mast (_[v]? BIF 20 64 n, Almk 2 101, HA Winkler _[Volksk.] 60, here misunderst?). _[V] Griffith _[Stories] 100, HO Lange _[Amenemope] 133.</div>
+					<div id="text_goes_here" contenteditable="true" spellcheck="false" rows="5" placeholder="Type text here…">~co1[ϩⲟⲩⲏⲧ] _d[S]_d[A2]_d[Bf], pl ~co[ϩⲟⲩⲁⲧⲉ] _d[S] & sg as pl, nn, _[passenger] on board ship (?): Ex 27 29 ~co[ⲛⲉϩ.] (_d[B] om) ~gr[ἐπιβάτης] ^1 ^2 ^9 (var ~gr[ναύτης]) _[nauta]; P1312 156 ~co[ⲛⲛⲉⲉϥ…ⲙⲛⲛⲉϩ. ⲉⲧⲧⲁⲗⲏⲩ ⲛⲙⲙⲁⲩ] ~gr[ναύ.…ἐπ.], <b>BHom88</b> ship of faith ~co[ⲉⲣⲉⲛⲛⲉⲉϥ ϩⲓⲱⲱϥ] that is clergy, ~co[ⲉⲣⲉⲛⲉϩⲟⲩⲁⲧⲉ ⲧⲁⲗⲏⲩ ⲉⲣⲟϥ] that is Christian folk, ManiP 123 _d[A2] ~co[ⲁⲡⲥⲧⲁⲩⲣⲟⲥ ⲣ ϫⲁⲓ ⲁⲙⲯⲩⲭⲁⲩⲉ ⲣ ϩ.]; P 44 54 ~co[ⲛⲉϩ.] ~ab[قرايا] _[yards] of mast (_[v]? BIF 20 64 n, Almk 2 101, HA Winkler _[Volksk.] 60, here misunderst?). _[V] Griffith _[Stories] 100, HO Lange _[Amenemope] 133.</div>
 				</fieldset>
 			</div>
 			<div id="rendered_view">
