--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -610,7 +610,238 @@
 				<li><span class="page">—</span>7, after <i class="dialect">A<sup class="lycopolitan">2</sup></i> add <i class="dialect">F</i> (Polotsky).</li>
 				<li><span class="page">—</span>19 up, <span class="coptic">ⲱ</span> <i class="dialect">S</i> often AZ 23 104 ff.</li>
 				<li><span class="page">—</span>24 up. <i>Cf</i> <span class="eg-tr">n-ꞽw</span> (<span class="coptic">ⲛⲏⲩ</span>) (Griffith).</li>
-				<li><span class="page">2 <i>a</i></span><i class="dialect"></i> <span class="coptic"></span>.</li>
+				<li>20 _b_ 14, more prob pl of αὐλαία.</li>
+				<li>22 _a_ 6 up, for 237 read 236.</li>
+				<li>23 _b_ 26, for _Stories_ read DM (Edgerton).</li>
+				<li>— 9 up, Cl 4 add πρός, _cf_ p 685 _a_ 30.</li>
+				<li>24 _a_ 15, occurs in Eccl 7 12.</li>
+				<li>25 _a_ 13, ⲁⳉⲱⲙ is in Pro 23 5, 24 22 ἀετός.</li>
+				<li>— after 17 up, add</li>
+				<li>	ⲁϩⲁⲛ [[S]] conj: ST 240 10, _cf_ ⲁϩⲁⲛ, ⲁϩⲛ [[A^2]] Mani K 6, 142 &c., P 133.</li>
+				<li>— 12 up. _Cf_ ? places ⲧⲙⲟⲩⲛⲁϩⲓ (BМ 1171), Θμοιναχῆ (PHib 1 8), Ψινάχις (PFior 3 364).</li>
+				<li>25 _b_ 16 up, for ⲟⲩⲟϭⲉ read ⲟⲩⲁϭⲉ.</li>
+				<li>— 6 up. _Cf_ also AZ 55 89.</li>
+				<li>26 _a_ 18, add EW 170 [[В]] ⲁϭⲛⲉⲛⲥⲉⲧⲁⲙⲟⲓ.</li>
+				<li>— 23 up, prob _l_ ⲁⲭⲁⲩ, pl of ⲁⲭⲱ (KKS 179) & add ⲁⲭϩⲁⲩⲓ [[F]] Lam 43 δράκων.</li>
+				<li>— 6 up, delete [[B]] & add ⲁϭⲟⲗϯ [[B]].</li>
+				<li>— _ult_, _l_ ⲁϭⲟⲗϯ (_cf_ JEA 8 117). Yet ⲁϭⲟⲗ _calf_ (_v_ Rec 19 100) was formerly known: _Actes 5^e Cong. Papyrol._ 1938 79, glossary 3d cent. BC μόσχος · αγολ.</li>
+				<li>26 _b_ 19, add Cai 67324 ⲁϭⲁⲛ in list of σκεῦη</li>
+				<li>28 _a_ 2, as measure CO 139.</li>
+				<li>28 _b_ 8 up, after 1st [[S]] add ἀναπηδύειν (ΗΤ).</li>
+				<li>29 _a_ 28, read Τβήκις (Griffith).</li>
+				<li>— 32, read ⲃⲁⲕ- [[S]].</li>
+				<li>29 _b_ 2, read PS.</li>
+				<li>30 _a_ 16 up, add ⲃ. ⲟⲩⲕⲟⲧ. _V_ ⲕⲱⲧⲉ (ⲕⲟⲧ).</li>
+				<li>31 _a_ upper margin, read ⲃⲏⲕⲉ.</li>
+				<li>32 _a_ 3, read Eccl 11 9 ([[F]] ⲓⲱⲣϩ ⲛⲛⲃⲉⲗ) ὅρασις ὀφ., Pro 27 20 ([[A]] ⳉⲁⲣⲃⲉⲗ) στηρ. ὀφ.</li>
+				<li>33 _a_ 15, read ⲭⲱ, 32 read ⲭⲁ.</li>
+				<li>— 16, read Mic 413 [[S]] (ShA 1 385) [[A]][[B]](Grossouw).</li>
+				<li>— 33 _b_ 20, not Sh, but Chrysostom (PG 63 206 om).</li>
+				<li>— 10 up, read ϩⲏⲧ.</li>
+				<li>34 _b_ 4 up, read (ⲙⲙⲁⲩ).</li>
+				<li>35 _b_ 4 up, read 88.</li>
+				<li>36 _b_ 18, read ἀσυνάκτους.</li>
+				<li>37 _b_ 10, add ShIF 151 ⲃ. ⲉϩⲣⲁⲓ ⲛⲥⲁⲛⲛⲟⲩⲛⲉ.</li>
+				<li>38 _a_ 1. _Cf_ _bkr·t_ throne (Dévaud). But ⲃⲗⲕⲉ [[А^2]] Mani _pass_ confirms meaning as given.</li>
+				<li>38 _b_ 17, add TEuch 1 124 ⲃⲁⲗⲛϩⲙⲱⲟⲩ.</li>
+				<li>— 19 up, after [[S]] add κίβδηλος (ΗΤ).</li>
+				<li>39 _b_ 5, read Deu 28 48 [[S]]([[B]] ϩⲕⲟ).</li>
+				<li>40 _a_ 5 up, m in Ps 91 13 [[B]] (Griffith).</li>
+				<li>— 22 up, _v_ p 755 _a_ _penult_ ϫⲁⲧⲃⲁⲓⲛⲉ.</li>
+				<li>— 14 up. _Cf_ ? BMOr 6201 A111 [[S]] bring 400 ⲛⲟϭ ⲛⲃⲱⲛⲓ (or ? ⲃⲱⲛϯ)…ⲉⲛⲁⲛⲟⲩ ⲛⲗⲉⲩⲕⲟⲛ.</li>
+				<li>41 _b_ 21 up, for 14 read 15.</li>
+				<li>42 _a_ 19, for 23 read 47.</li>
+				<li>— 29, for ϫⲁϫ read ⲃⲏⲛⲉ 1°.</li>
+				<li>42 _a_ 8 up, read ROС 18.</li>
+				<li>43 _a_ 2, _v_ rather ϩⲃⲟⲣⲃⲣ.</li>
+				<li>— 4 up, read ShBM.</li>
+				<li>43 _b_ 20, delete In…(Preisigke). _V_ Spg _DemStud_ 1 55*, 403 (Spiegelberg).</li>
+				<li>— 18 up, add & ? ⲃⲗϣⲁⲧⲉ among implements, BMOr 6201 A 90.</li>
+				<li>44 _a_ 16 up, add vb: P 54 174 ⲉⲩⲃⲁⲣϣⲓ [يقلفطوا].</li>
+				<li>44 _b_ 10, add & ⲙⲃⲣⲉϩⲓ _cart_.</li>
+				<li>— 8 up, add ManiK 33 [[A^2]] ⲃⲁⲥⲛϭ.</li>
+				<li>45 _a_ 7, read ἠμφιεσμένος.</li>
+				<li>— 10, ⲃⲁⲥⲧϩⲟ paral ϣⲓⲡⲉ, ⲡⲟ(ⲟ)ⲛⲉ, ⲧⲁⲕⲟ, ϣⲱϥ, ⲙⲉⲧϫⲁϫⲉ, _v_ p 648 _b_ _infra_.</li>
+				<li>— 25, read ϩⲁⲧⲃⲛⲛⲉ.</li>
+				<li>— 27, ⲃ. ϩⲁⲧⲉ _v_ ⲙⲉⲗϩⲉ.</li>
+				<li>— 14 up, add Cai 67324 _vo_ ϣⲟⲩϣⲧ ⲛⲃ.</li>
+				<li>— after 4 up, add</li>
+				<li>	ⲃⲓⲧ [[F]] nn m, _edge_, _side_ ? of pot: OratCyp 123 drop ⲉⲥⲁϣⲓ ⲉⲡⲃ. ⲛⲟⲩⲕⲉⲧⲟⲩⲥ (_cf_ Is 40 15), PBad 5 402 write names ⲉⲡⲃ. ⲟⲩϭⲁⲗⲉϩⲧ.</li>
+				<li>45 _b_ after 4, add</li>
+				<li>	ⲃⲱⲧ-, ⲃⲟⲧ⸗ _v_ ⲟⲩⲱⲱⲧⲉ.</li>
+				<li>46 _a_ 7 up, gloss ⲃⲱⲱⲑ = ? ⲟⲩⲱⲧϩ _smelting_.</li>
+				<li>46 _b_ 1, ⲃⲁⲑⲟ in ViK 954 (Till).</li>
+				<li>47 _a_ 6 up, in Synax 2 105 = [ضبعة] _hyena_.</li>
+				<li>47 _b_ 21, read [سذاب بري].</li>
+				<li>48 _a_ 1, read ⲟⲩⲱϩⲉ.</li>
+				<li>— 10, prob from PascLect ⲟⲩⲁϩⲃⲉϩ (Cai), ⲟⲩ- ⲃⲁϩⲃⲉϩ (Gött) (Dévaud).</li>
+				<li>— 21, read ⲟⲩⲟϩⲛ-.</li>
+				<li>48 _b_ 6, read ⲟⲩⲁϭⲉ.</li>
+				<li>— 9, after ϩⲁⲥⲓⲉ) add ναυάγειν.</li>
+				<li>49 _b_ after 14, add</li>
+				<li>	ⲅⲱ _v_ ϭⲛⲟⲛ (ϭⲟⲛ).</li>
+				<li>52 _b_ 18, add Mor 30 27 [[F]] ⲙⲛⲧⲉⲃⲃⲉ of blind woman.</li>
+				<li>53 _a_ 5 up, read βρῶσις.</li>
+				<li>53 _b_ 19. Ostr _penes_ Crum ⲃⲣⲏⲉⲓⲛⲉ, paral κόκκος.</li>
+				<li>54 _a_ 19–21, delete all & _v_ ⲧⲟⲩⲟ (ⲧⲉⲃⲟ).</li>
+				<li>55 _b_ after 5 add</li>
+				<li>	ⲉⲗⲟⲓϩ [[S]]: Ora 4 21, paral ⲉⲙⲉ. _Cf_ DM 1 17 n _mrꞽḥ_, Πελαίας (Polotsky).</li>
+				<li>— _ult_, add</li>
+				<li>	ⲉⲙⲁⲙⲉⲓ [[S]] _v_ ⲙⲉ _truth_ (ⲛⲁⲙⲉ).</li>
+				<li>	ⲉⲙⲟⲛ _v_ ⲙⲙⲟⲛ _verily_.</li>
+				<li>56 _b_ 1, from _ꞽmskaw_ (_Kémi_ 2 6).</li>
+				<li>— 10 up, rather vb than nn (Griffith).</li>
+				<li>— 18 up, for whence? read P 70 268.</li>
+				<li>57 _a_ 15. _Cf_ also ⲥⲣⲛϩ.</li>
+				<li>57 _a_ 23, Va 61 97 = 2 Tim 4 10.</li>
+				<li>57 _b_ 12 up, add Ryl 268 ⲡϩⲓⲥⲉ ⲉⲣⲉⲓ ⲉϫⲱϥ; not in J&C 95 18, where _l_ ⲉ(ⲧ)ⲣ-.</li>
+				<li>— after 3 up, add</li>
+				<li>	ⲉⲣⲓ [[B]]: Lev 22 7 Lag ἄρτος, substantiated (?) by Κ 331 ⲡⲉⲣⲓ [طعاما].</li>
+				<li>58 _a_ 6 = ? ἐρέβινθος (Jernstedt).</li>
+				<li>— 15 up, read προεπαγγέλλειν.</li>
+				<li>58 _b_ 17 up, add Ora 4 21 ⲣ ⲉ. ⲛϩⲱⲣ (Horus).</li>
+				<li>60 _a_ 8, add ⲉⲥⲓⲧ [[F]] LAp 530 &c.</li>
+				<li>62 _a_ 5, add TillBau 129 ⲧⲁⲗⲟ ⲟⲩⲁⲧⲁϩ ⲉⲡⲛⲁⲧ.</li>
+				<li>— 6 up, for [[S]][[F]] read [[S]][[A]][[A^2]][[F]].</li>
+				<li>62 _b_ 6 up, for ⲉⲟⲩⲓⲛ &c read ⲟⲩⲓⲛ, _v_ ⲟⲩⲉⲓⲛ.</li>
+				<li>63 _b_ 11, add ⲛⲉϣⲱ pl PMéd 105 ? _scrofula_ (Chassinat otherwise).</li>
+				<li>— 15, add ϣⲡⲉ [[A]] Louvain C 128 (Lefort).</li>
+				<li>64 _b_ 11, delete ?.</li>
+				<li>65 _b_ 12, ⲉϭⲁⲁϣ also [[F]], Jer 26 9 (Mus 49 173).</li>
+				<li>66 _b_ 27. _V_ also ⲛⲏⲃ.</li>
+				<li>— 11 up. _V_ ? PGM 1 60 667 ⲏⲓ ⲉⲣⲓⲛⲕ. _Cf_ 665 ⲁⲛⲟⲕ ϩⲱ.</li>
+				<li>67 _a_ 21, for [[F]] read [[S]].</li>
+				<li>67 _b_ 17 up, ⲏϭⲓ [[F]] add (Mor 30 53).</li>
+				<li>68 _a_ 8 up, add ⲑⲟⲃϣ†, ⲑⲟⲛϣ†.</li>
+				<li>68 _b_ 9, delete _fix &_.</li>
+				<li>— 20, = P 54 143 ⲑⲁⲗⲓⲗⲁϩⲓ.</li>
+				<li>69 _a_ 6, read El.</li>
+				<li>— 7 up, for ⲧⲱⲣϣ read ⲧⲣⲟϣ.</li>
+				<li>69 _b_ 15 up, 'ex Scala', this is P 54 168. For ⲁϥⲑ. _v_ ⲛⲟⲩϥⲧ.</li>
+				<li>70 _b_ 16, [[B]] also f, DeV 2 5.</li>
+				<li>— 19, ⲉⲓ nn prob also Lu 11 33 (Lefort).</li>
+				<li>73 _a_ 5 up, read ⲡⲉⲭⲁⲓⲱⲥ.</li>
+				<li>— 4 up, as [[S^a]] place-name BMOr 9533 _vo_ ⲡⲉⲓⲁⲉ.</li>
+				<li>74 _a_ 2, for _raise_ read _open_ (_v_ ⲧⲟⲩⲛⲟ & AZ 47 146).</li>
+				<li>— 10 up, add Blake 302 amethyst ⲉⲧⲉⲓ ⲙⲛⲡⲱⲛⲉ called &c.</li>
+				<li>74 _b_ *c*, add JKP 2 20 [[S]] ⲓⲉ ⲥⲁⲃⲁ _Oh, (queen of) Sheba_.</li>
+				<li>75 _a_ 26, add ⲉⲓⲉ- [[S^f]] P 130^4 90 ⲉⲓⲉ ⲧⲟⲟⲧϥ ⲛⲥⲱϥ.</li>
+				<li>— 14 up, add P 129^12 16 ⲡⲉⲓⲱ ⲙⲡⲉⲩϩⲟ.</li>
+				<li>76 _a_ 9, read ⲧⲱⲟⲩ.</li>
+				<li>77 _b_ 24, add ⲣⲙⲓⲟⲙ ? _man of wine-press_ (Drioton): WS _l_ _c_, MIF 59 60 n.</li>
+				<li>78 _a_ 18, add ⲉⲓⲙⲉ ⲉⲣⲁⲧ⸗ [[S]]: ViK (Sh?) 9317 ⲛⲧⲁϣⲓⲛⲉ ⲛⲥⲁⲉⲓ. ⲉⲣⲁⲧϥ ⲙⲡϩⲱⲃ.</li>
+				<li>78 _b_ _ult_, add ⲛ ⲧⲟⲟⲧ ⲛ- KKS 302 ⲁ[ⲩ ? ]ⲛ ⲧⲟⲟⲧⲟⲩ ⲛϣⲙⲟⲩⲛ ⲛⲟⲩⲱⲛ ϩⲙⲡⲉⲩⲁϩⲉ.</li>
+				<li>81 _a_ 24. _Cf_ ShViK 934 222 ⲧⲓⲛⲉ ⲙⲡⲉⲕⲱⲧ.</li>
+				<li>82 _a_ 12 up, add ϫⲓ(ⲟ)ⲟⲣⲉ [[A^2]] vb & nn, Mani _pass_.</li>
+				<li>83 _a_ 7, ⲉⲉ⸗ also [[A]](Gunn).</li>
+				<li>83 _b_ 16 up, read 24 90.</li>
+				<li>84 _a_ 3 up, add Cai 67324 _vo_ in list of σκευῆ ⲟⲩⲉⲓⲣⲏ ⲟⲩⲉⲓⲉⲓ (_one_), therefore f.</li>
+				<li>84 _b_ 12 up, add DeV 2 10 [[В]] ⲓⲟⲣϩ⸗.</li>
+				<li>85 _a_ 19 up, add name Νεφεριηρι (PGM 1 114).</li>
+				<li>85 _b_ 5 up, add ShA 2 113.</li>
+				<li>86 _a_ 24, add [[S]] Ora 4 22 ⲉⲕⲡⲏⲧ ⲉⲕⲓⲏⲥ.</li>
+				<li>87 _b_ 12 up, for full of, prob read smeared with.</li>
+				<li>88 _a_ 6, var ⲉⲩⲉⲛⲉⲡⲓⲧⲛ (Lefort Mus 42 123).</li>
+				<li>— 10, add TillOster 30 [[Α]] ⲉⲓⲱⲱ.</li>
+				<li>— 18 up, add Vi ostr 740 ϣⲛⲧⲁⲉⲥⲉ ⲛⲁⲁⲩ.</li>
+				<li>— 12 up, var _Mart. d. heil. Viktor_ ed. (not publ.) Lemm 27 ⲙⲛⲧⲁϥⲧⲉ ⲛⲁⲧⲁⲓⲟⲩ.</li>
+				<li>88 _b_ 1, add BKU 1 26 (8117) [[F]] child ⲉⲁ[ϥⲉⲣ ⲓ]ϣ ⲉⲧⲟⲩϣⲏ ϩⲁⲣⲁϥ.</li>
+				<li>89 _a_ 18, add BP 8098 [[S]] my father dead ⲁⲧⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲓ. ϩⲓⲱⲱⲧ.</li>
+				<li>— 15 up, add _cf_ Stegemann 64 ⲟⲩⲏϣⲧⲉ орр ⲟⲩⲁⲣⲁϣ.</li>
+				<li>89 _b_ 4, for _ib_ read 58.</li>
+				<li>— 5 = λωποδυσία (Euseb iii 23 9).</li>
+				<li>90 _a_ 19, f numeral ⲕ̅ϯ [[B]] MG 25 196.</li>
+				<li>92 _a_ 6 up. _Cf_ ⲕⲱ 98 _b_ _infra_ (HT).</li>
+				<li>92 _b_ 12 up, after [[A]] add [[B]](C 86 91), & add ⲕⲁⲓ [[F]] (Baouit 107, 108).</li>
+				<li>94 _a_ 1, read ⲕⲁⲓⲟⲩⲁⲉⲓϣ ϣⲏⲙ.</li>
+				<li>— 5 up, for 27 read 17.</li>
+				<li>94 _b_ 9, ⲕⲉ-, add [[S^f]] Mor 55 67 ⲕⲉ ⲧⲟⲟⲧϥ ⲉⲃⲟⲗ _et saepe_.</li>
+				<li>98 _b_ 15 up, add ⲣⲟⲟⲩϣ, ⲥⲛⲧⲉ.</li>
+				<li>99 _a_ 18 up, _v_ also ⲣⲟ _strand_.</li>
+				<li>99 _b_ 11, read ⲕⲉⲗ.</li>
+				<li>100 _a_ after 4 up, add</li>
+				<li>	ⲕⲃⲃⲉ _v_ ⲕⲱⲃ _s f_.</li>
+				<li>100 _b_ after 7, add</li>
+				<li>	ⲕⲱⲃϩ [[S]] vb tr, _bind_ (?): Mor 31 202 (Abimelech & Jeremiah) ⲁϥⲕ. ⲛⲛⲉⲧⲟⲉⲓⲥ ⲛⲛⲉⲛⲟⲩϩ.</li>
+				<li>— 16 up, prob also Jer 50 12 [[S]] ed. Maspero.</li>
+				<li>101 _b_ after 2, add</li>
+				<li>	ⲕⲱⲕ, ⲭⲱⲕ, ⲕⲟⲕ (Ann 27 63), ⲕⲟⲭ (Ora 4 23, Kropp D 97), ⲭⲱⲱⲭ (Kropp K 15) [[S]], rubric in magical texts.</li>
+				<li>— 5, ⲭⲱⲱⲭ _v_ Sethe, _Amun u. die 8 Götter_ 65.</li>
+				<li>— 24, read ϣⲗⲟⲡⲗⲡ.</li>
+				<li>102 _a_ 9 prob not error; _cf_ PGM 1 22 2 κοκκούφατ also called γυπαλέκτωρ (Keimer).</li>
+				<li>— after 12, add</li>
+				<li>	ⲕⲟⲩⲕⲥ [[S]] nn f, _tip of nose_: P 46 245 ⲧⲕ. [طرف الانف] (_cf_ ϣⲁ _nose_).</li>
+				<li>— 14 up. _Cf_ [כלי] (Calice).</li>
+				<li>— after 15 up, add</li>
+				<li>	ⲕⲗⲁ _v_ ⲕⲣⲟ.</li>
+				<li>103 _b_ 22, read C 41 10.</li>
+				<li>— 20 up, add ⲕⲉⲗⲗⲓ [[O]] κλεῖστρον POslo 312.</li>
+				<li>— 12 up, ⲕⲉⲗⲓ _knee_ prob not same as ⲕⲗⲗⲉ _bolt_ (Sdff).</li>
+				<li>104 _a_ 19, ϩⲁⲙⲕ. = ϩⲁⲙⲕⲗⲗⲉ, not ϩⲁⲙⲕⲉⲗⲉⲛⲕⲉϩ.</li>
+				<li>107 _b_ 2, add ⲕⲁⲗⲉϫ† [[S]]([[S^a]]) BKU 1 1 _ro_.</li>
+				<li>— 24 up, read ⲉϥϭ.†</li>
+				<li>108 _a_ 4, add Pcod [[F]] 29 ⲕⲉⲗϫⲓ.</li>
+				<li>108 _b_ _penult_, add ViK 9584, cit Cant 2 17 ⲛⲧⲛϩⲁⲓⲃⲉⲥ ⲕⲙⲧⲟⲩ (_bis_) κινεῖσθαι. _Cf_ HT's text.</li>
+				<li>111 _a_ 20, after ⲛⲟⲩ) add ἐν τῷ, after 11 ἡνίκα ἄν.</li>
+				<li>111 _b_ after 8 up, add</li>
+				<li>	ⲕⲁⲛⲕⲗⲱ _v_ ϭⲓⲛϭⲗⲱ.</li>
+				<li>— 6 up, for [د׳] _v_ Dozy, ? = ⲧⲕⲟⲩ(ⲛ)ϫⲟⲩ р 113 _а_.</li>
+				<li>112 _b_ 8 up, _v_ also ⲥⲉⲧⲏ.</li>
+				<li>113 _a_ 14, read _computruerit_.</li>
+				<li>— 16 up, add ⲕⲓⲗϫⲟⲩ [[F]] BP 8095 twice in list of εἴδη.</li>
+				<li>113 _b_ 22, for 535 read 536.</li>
+				<li>— 26, _v_ ϭⲟⲡ 2°.</li>
+				<li>115 _a_ 9 up, for ⲉⲁⲧ read ⲙⲟⲩ ⲛⲥⲱⲣⲉⲙ.</li>
+				<li>118 _a_ 19 up, delete _ib_ to ϭⲱⲛϭ & _v_ ϭⲱⲣϥ.</li>
+				<li>119 _b_ 18, add ⲕⲉⲏⲥⲓ [[F]] Mor 30 50.</li>
+				<li>120 _a_ 5, ⲭⲱⲣⲓⲥ &c, add BM 1165 [[S]] ⲛⲁⲧⲕ.</li>
+				<li>— 5 up, for ⲑⲱⲙⲥ read ϫⲱⲗ.</li>
+				<li>121 _a_ 21 up, add ⲕⲏⲥⲉ in ostr _penes_ Crum.</li>
+				<li>121 _b_ 13, add ViK 9624 170 [[S]] on those that pray ⲉⲣⲉⲛⲉⲩϭⲓϫ ⲕⲉⲥⲕⲟⲥⲧ ⲉⲡⲉⲥⲏⲧ ⲛⲙⲙⲁⲩ.</li>
+				<li>— 22, for 9 read 19.</li>
+				<li>122 _b_ 3 up, for [[A]] read A.</li>
+				<li>127 _b_ 10, read 172 4 17.</li>
+				<li>128 _a_ 12 up, Lu 19 43 περι-, not μεταβάλ.</li>
+				<li>129 _b_ 4, for ⲱⲥϧ, read ⲥⲱⲕ.</li>
+				<li>— 18 up, is qual of ⲕⲛⲛⲉ (Dévaud).</li>
+				<li>130 _b_ after 22, add place-name ⲧⲁⲛⲕⲉϣ (var -ⲕⲁϣ PLond 4 598).</li>
+				<li>130 _b_ 22 up, add Ostr _penes_ Crum ⲧⲕⲓϩⲉ ⲛⲭⲁⲣⲧⲏⲥ.</li>
+				<li>131 _a_ 5. _Cf_ Persian _gaoša-bâra_, Bartholomä _Altiran_. _Wbuch_ (Jernstedt).</li>
+				<li>— 14 up, ⲕⲁϩⲓ Ps 39 8 = κεφαλίς, this word ?</li>
+				<li>132 _a_ 2, add ? Ez 23 42 ⲕⲉϩⲑⲱⲣ(ⲓ) ([[S]] ⲣ ⲧⲱⲣⲉ) ἀνακρούεσθαι.</li>
+				<li>132 _a_ 20, add ⲕⲁⲁϩ [[F]] BKU 1 26 (8116 _b_) 38.</li>
+				<li>133 _b_ after 1, add</li>
+				<li>	ⲕⲓϩⲉ _v_ ⲕⲏϣⲉ.</li>
+				<li>135 _b_ 12 up, add Ryl 106 4 ⲁⲗⲟϥ ⲉⲡⲕⲱϩⲧ.</li>
+				<li>137 _a_ 2, add θηλυμανής.</li>
+				<li>137 _b_ 10 up, var [شره].</li>
+				<li>— 14, read [قمارى].</li>
+				<li>138 _a_ 11 up, pl ? ⲗⲟⲟⲕ [[S]] Ora 4 27.</li>
+				<li>140 _a_ 20, var ViK 9067 ⲧⲉⲧⲛⲗⲓⲕⲧϥ ⲙⲡⲉⲧⲛϩⲏⲧ _bring a veil upon_.</li>
+				<li>140 _b_ 10 up, add ShViK 934 222 ⲡⲣⲉϥⲣϩⲱⲃ ⲉⲡϩⲟⲙⲛⲧ ⲁⲩⲱ ⲡⲗ., _ib_ ⲣⲉϥⲥⲙⲛ ⲗ.</li>
+				<li>141 _a_ 14 up, read ϩⲁⲗⲟⲗⲓ.</li>
+				<li>— 26, add EpJer 16 [[S]](Mus 50 230) ϣⲟⲉⲓϣ ⲉϣⲁϥⲗⲁⲁⲗⲉ ⲉⲣⲟⲟⲩ ([[B]][[F]] Gk om).</li>
+				<li>141 _b_ 17, for 27 read 17 & add νεότης.</li>
+				<li>— 22 up, delete ⲉⲃⲟⲗ.</li>
+				<li>142 _a_ 4 up, P 54 145 [عشب], which suits βοτάνη.</li>
+				<li>— 15 up, _l_ prob ⲙⲡⲉⲣⲥⲉ ⲙⲛ[. _Cf_ ⲡⲉⲣⲥⲉ [خوخ] _peach_ Tri 498, K 177 &c. (_V_ LöwF 3 347).</li>
+				<li>142 _b_ 12, add Mani 1 [[A^2]] ⲙⲟⲟⲗⲉ.</li>
+				<li>143 _a_ 2. _Cf_ ϭⲗⲟⲙⲗⲙ.</li>
+				<li>144 _b_ 19, read ⳉⲙ.</li>
+				<li>145 _a_ 17 up, read 23 1†.</li>
+				<li>— 10 up, add Kr 129 [[F]] ⲗⲱⲥ ⲉϩⲟⲩⲛ (_sic_ prob, Till).</li>
+				<li>148 _a_ 14 up. _Cf_ name (gen) Πλεσωνου _RevEpigr_ 1913 146.</li>
+				<li>— after 4 up, add</li>
+				<li>	ⲗⲁϣⲉⲉⲣ: ВMOr 6201 В 244 [[S]] ⲁⲛⲇⲱⲛⲉ ⲡⲗ.</li>
+				<li>— after 17, add</li>
+				<li>	ⲗⲟⲩⲏ⸗ [[S]] (?) vb tr, PMéd 211.</li>
+				<li>— 17 up. On etymology _v_ _Acta Or._ 16 93, citing Sethe _Von Zahlen_ 42.</li>
+				<li>148 _b_ 19, read ⲉⲥⲗ.† ⲉϩⲉ.</li>
+				<li>149 _b_ after 20, add</li>
+				<li>	ⲗⲉϩⲗⲏⲙ [[B]] _v_ ⲗⲉⲗⲏⲙ, ϩⲗⲱⲙ.</li>
+				<li>150 _a_ after 16, add</li>
+				<li>	ⲗⲁϩⲙⲓ [[B]] C 86 162 prob Coptic, _renegade_ ? _V_ Amélineau & Casanova.</li>
+				<li>— 16 up, add MIF 59 195 [[S]] ⲡⲣⲉϥⲱϣ ⲙⲡⲗⲉϩ., Ora 4 22 [[S]] ϩⲏⲧϥ ⲙⲡⲉⲩⲧⲟⲟⲩⲉ ⲉϥⲧⲏϭ ⲛⲗⲁϩ. ⲛⲕⲉⲙ (var _ib_ ⲛⲗⲁⲥ ⲛⲕⲁⲙ).</li>
 			</ul>
 		</div>
 		<div id="dictionary">
