update crum, dictionary_editor

--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -844,6 +844,158 @@
 				<li>150 _a_ after 16, add</li>
 				<li>	ⲗⲁϩⲙⲓ [[B]] C 86 162 prob Coptic, _renegade_ ? _V_ Amélineau & Casanova.</li>
 				<li>— 16 up, add MIF 59 195 [[S]] ⲡⲣⲉϥⲱϣ ⲙⲡⲗⲉϩ., Ora 4 22 [[S]] ϩⲏⲧϥ ⲙⲡⲉⲩⲧⲟⲟⲩⲉ ⲉϥⲧⲏϭ ⲛⲗⲁϩ. ⲛⲕⲉⲙ (var _ib_ ⲛⲗⲁⲥ ⲛⲕⲁⲙ).</li>
+				<li>150 _a_ after 12 up, add</li>
+				<li>	ⲗⲉϩϯ [[F]] _v_ ⲣⲁϩⲧⲉ</li>
+				<li>— 12 up, ⲗⲁϩⲱϫ EW 238 line 1 = [ساخ][[ار] _filth_.</li>
+				<li>151 _b_ 16, [[S]] also BHom 85 (Polotsky).</li>
+				<li>— 21 up, for ϯ ⲟⲩⲱ read om.</li>
+				<li>152 _b_ after 16 up, add</li>
+				<li>	ⲗⲱϭⲉ, -ⲕⲉ [[S]], among utensils: Ostr 3042 Univ Col Lond. _Cf_ λώκιον (Preisigke _Wbuch_).</li>
+				<li>155 _b_ 19, for 621 1° read 622.</li>
+				<li>155 _b_ 24. Phrases with ⲉϣⲱⲡⲉ do not belong here (Jernstedt in _Soc Egypt Univ Leningrad_ 6 29, 30).</li>
+				<li>156 _a_ 1, delete [[A]].</li>
+				<li>157 _b_ 13, in Mk 15 39 -ⲙⲉⲉⲓ.</li>
+				<li>159 _a_ 4. ManiP 57 &c shows Zoega's ⲙⲛⲟⲉⲓⲕ right.</li>
+				<li>160 _b_ _ult_, add</li>
+				<li>	ⲙⲟⲩⲓ [[S]], metal utensil: OstrChicago 855 ⲟⲩⲙ. ⲛⲃⲁⲣⲱⲧ, BP 69109 metal objects ⲙⲟⲩⲓ.</li>
+				<li>161 _a_ 14, read _wroth_.</li>
+				<li>161 _b_ after 27, add</li>
+				<li>	ⲙⲟⲕⲉ† [[S]]: Ora 4 27 ⲛⲉϩ ⲛⲥⲓⲙ ⲉϥⲙ.; meaning obscure.</li>
+				<li>163 _b_ 7, read [[A^2]][[B]]([[S]][[A]] diff).</li>
+				<li>— 13 up, pl ⲙⲕⲉⲩϩ [[F]] Jer 22 23 (MR 1934 23).</li>
+				<li>165 _b_ 16, read ἔνεδρον.</li>
+				<li>166 _a_ 14, add ManiK 33, 114 [[A^2]] ⲙⲗⲁϩ.</li>
+				<li>— 11 up, add Griff Stu 163 [[F]] ⲙⲁⲗⲁϩ.</li>
+				<li>166 _b_ 11, add Mor 51 35 [[S]] ⲙⲟⲩⲗⲁϩϫ opp ϭⲣⲟⲙⲡⲉ.</li>
+				<li>— 15 up, read [ع].</li>
+				<li>171 _a_ 10, add Ps 80 3 [[B]] ⲉϩⲟⲟⲩ ⲙⲙ. ([[S]] ϩ. ⲉⲧⲟⲩⲟⲛϩ ⲉⲃⲟⲗ) εὔσημος.</li>
+				<li>173 _b_ 11, ⲙⲁⲛⲏⲩ is properly sg, _cf_ _mnꞽw-ꞽꜣwt_ (Černý in _Miscel Vatic_ 1939) & ⲙⲉⲛⲏⲩ [[A^2]] ManiH (p 22*).</li>
+				<li>176 _a_ 11 up, read ([[S]] ϣⲓ, [[F]] ⲁⲓⲡⲓ).</li>
+				<li>176 _b_ 19, ⲙⲛⲟⲧ properly a dual (Sdff 146).</li>
+				<li>178 _a_ 8, _until_ is ⲉⲙⲡⲉ-, not ⲙⲡⲉ- (Polotsky).</li>
+				<li>182 _a_ 6, for ? read 5 21.</li>
+				<li>183 _b_ _ult_. As name Πμέρεζ (Preisigke).</li>
+				<li>184 _a_ 11 up, read 215.</li>
+				<li>184 _b_ 4 up, add ⲙⲁⲥⲓ† [[F]](_v_ ϣⲁⲣⲱⲧ).</li>
+				<li>186 _a_ 6, read ϣⲟϣ.</li>
+				<li>186 _b_ 17, add Ora 4 20 [[S]] ⲧⲙⲁⲥⲓⲟ.</li>
+				<li>187 _a_ 11 up, on ⲙⲉⲥⲧⲉ &c, GöttGA '06 588.</li>
+				<li>187 _b_ 19, add ⲙⲉⲥⲉϩ [[F]] Ora 4 203.</li>
+				<li>— 13 up, add f [[B]] ⲓ̅ϯ (Lu 15 8 var).</li>
+				<li>188 _a_ 5, add Dioscorides, μιθ = σέλινον κηπαῖον.</li>
+				<li>189 _a_ 2 up, add Col 2 19 [[B]]([[S]] ⲧⲣⲁ) ἁφή. (_cf_ ⲙⲟⲩⲧ).</li>
+				<li>190 _a_ 20 up, add ⲁⲙⲁⲧⲉ [[S^a]] Miss 1 387.</li>
+				<li>193 _b_ 13, the two are distinct, _v_ Spiegelberg _Orakelglossar_ p 60 (HT).</li>
+				<li>— 16 ⲙⲁⲧⲉⲙ Is 30 24 θρῖναξ Sym (Möhle).</li>
+				<li>195 _a_ 5 up. In Si ⲙ.  is qual, not nn.</li>
+				<li>— 3 up, ⲙⲁϩⲉ is _ell_, but transl doubtful.</li>
+				<li>195 _b_ 4 up, ⲙⲁⲧⲛⲉ prob = BM 310 67 [[S]] ⲙⲙⲱⲧⲛ (_v_ OLZ '31 842).</li>
+				<li>198 _a_ 18 up, for ⲟⲑⲉ read ⲟⲩⲱⲧϩ.</li>
+				<li>199 _a_ 15 up, read ϧⲁⲣⲱⲧⲉⲛ.</li>
+				<li>203 _a_ after 22 up, add c ϩⲓⲣⲛ- [[S]]: Mor 51 38 ⲙ. ϩⲛϩⲉⲛϣⲃⲟⲧ…ϩ. ϩⲣⲟ _strike upon_.</li>
+				<li>203 _a_ 7 up, delete this.</li>
+				<li>206 _a_ 12 up, add ManiP 46 &c [[A^2]] physician opens ⲡⲉϥⲙ. _drug-box_.</li>
+				<li>206 _b_ 22 up, also prob TillBau 124.</li>
+				<li>208 _a_ 8, read ⲙⲁϣⲉ.</li>
+				<li>— 16 up, read ⲙⲁϩⲟⲩⲁⲗ [[S]], -ⲃⲁⲗ [[B]].</li>
+				<li>— 13 up, in Mor 48 ⲙⲉϩⲟⲩⲁⲗ.</li>
+				<li>209 _a_ 22, delete As nn to ⲛⲉ. _Cf_ 211 _b_.</li>
+				<li>210 _b_ 11, read A 2 279.</li>
+				<li>211 _a_ 13, add PBad 5 376 [[S]] ⲙⲟⲣⲟⲩ ⲙⲙⲁϩⲕⲱⲕ.</li>
+				<li>211 _b_ 7 up, add ⲙⲉϩⲧⲉ [[A^2]] ManiK 91.</li>
+				<li>212 _a_ 11, add ⲙ. ⲛϭⲣⲟϭ, _v_ ϭⲣⲟⲟϭ _s f_.</li>
+				<li>213 _a_ 22 up. Primary meaning _chisel_ (Gardiner, _cf_ PSBA 21 270).</li>
+				<li>213 _b_ 10, add BP 6910 9 ⲙⲓϫⲗ (_ter_).</li>
+				<li>215 _a_ 15 up, to 216 _b_ 23.</li>
+				<li>	The treatment of ⲛ- needs entire revision (Sdff, Gardiner).</li>
+				<li>218 _b_ 19 up, read ⲉϩⲟⲧⲉ- only (Polotsky).</li>
+				<li>219 _a_ 18, add ⲛⲉⲉ [[A^2]] ManiK 111.</li>
+				<li>219 _b_ 7 after ⲛⲁⲩ† [[S]] add [[F]] Lam 1 2.</li>
+				<li>224 _a_ after 13, add</li>
+				<li>	ⲛⲁⲕⲟⲧ [[S]] nn m, part of lamp, _v_ ϩⲱⲧ(ⲉ)ⲣ qual TurM 18, & ϩⲏⲃⲥ _s f_.</li>
+				<li>226 _b_ 19, read ⲥⲑⲉⲣⲧⲉⲣ.</li>
+				<li>227 _a_ 9, ⲛⲁⲛⲉ-, add [[F]] Pcod 39 (_cf_ OLZ '33 418). ⲛⲁⲛⲉ- [[S]] rare.</li>
+				<li>227 _b_ 13 up, add Cant 5 16 [[F]] ⲛⲏⲛⲓ ([[S]] ϩⲉⲗϭⲉ) γλυκασμός.</li>
+				<li>229 _a_ 11. _Cf_ νουσι magical name PGM 1 198, 2 123.</li>
+				<li>229 _b_ 20, add ⲛⲟⲩⲧ f [[A^2]] ManiK 114, _receptacle_.</li>
+				<li>— _ult_. _Cf_ Gardiner JEA 14 86 ff.</li>
+				<li>230 _b_ 22, add ⲛⲧⲱⲣⲉ [[A^2]] ManiP 209 & _cf_ PGM 2 25 μασυ ντορι (or ? ϩⲧⲱⲣⲉ).</li>
+				<li>232 _a_ 17, ⲛⲧⲱⲟⲩⲛ occurs Job 7 13, ib 31 8, ViSitz 172 4 19, P 131^4 104, BM 343.</li>
+				<li>233 _a_ 12 up, read ⲥⲙⲉϩ.</li>
+				<li>235 _a_ 8, read ⲛⲟⲩ- (Sdff).</li>
+				<li>236 _a_ after 4, add</li>
+				<li>	ⲛⲁⲭ BM 1020, prob read ⲛⲁⲧ.</li>
+				<li>— 18 up. _Cf_ [ذوشة] _fever_ (Worrell).</li>
+				<li>238 _a_ 3 up. _Cf_ Va 68 178 ⲣⲉϥϯ ϩⲁⲡ ⲛϣⲁⲧⲉ (_sic_).</li>
+				<li>238 _b_ _ult_, add ShViK 934 222 ϩⲛⲟ ⲛⲛ.</li>
+				<li>239 _b _ 16, in Gött ar 114 133 [نام فيه قليلا].</li>
+				<li>— 18, read ϩⲉⲙ-, ϩⲁⲙⲛ.; 19 read ⲡⲓϩ.; 20 read [نفس], not [ﻣﻨ׳].</li>
+				<li>— 26, add ? ⲛⲉϥⲉⲣ- [[B]] Pro 6 3 ([[S]][[A]] ⲧⲱⲃⲥ παροξύνειν).</li>
+				<li>239 _b_ 27, ⲛⲁϥⲣ- in ⲛ. ⲧⲱⲣⲉ Sa 14 18 [[S]](_sic_ _l_ Polotsky, var ⲙⲛⲧⲣⲉϥⲣ ⲧ.) φιλοτιμία. _Cf_ ManiK 132.</li>
+				<li>240 _b_ 3, read [ورم].</li>
+				<li>— 5, add ? Ora 4 20 for teeth-cutting ϯ ⲥϩⲃⲏⲏⲧⲉ ⲛⲙⲟⲩⲗⲁϩ ⲉⲛⲉϥⲛϥⲧⲉ.</li>
+				<li>241 _a_ 5 up, read _sewing_.</li>
+				<li>241 _b_ 20 up, add ⲛⲁϩ- [[S]], _v_ ϣⲗⲁϩ (ϣⲗϩϥ). ⲛⲁϩ⸗ & ⲛⲁⲩϩ⸗ distinct vbs: _cast off & turn_ (AZ 73 137).</li>
+				<li>242 _b_ _penult_, _cf_ Φερετνοῦις POxy 937.</li>
+				<li>— 5 up, read (ⲛⲁϩⲛϩ) (Sdff).</li>
+				<li>244 _b_ 4 up, for ϩⲉⲛϩⲱⲛ read ⲛⲉϩⲛⲱϩ (Lagarde).</li>
+				<li>246 _b_ 20, should be ⲟ ⲛⲛϩⲟⲧ, _cf_ JEA 18 194 (Polotsky).</li>
+				<li>— after 10 up, add</li>
+				<li>	ⲛⲁϩⲧⲉ [[S]] among metal (?) implements: Pap _penes_ BHStricker.</li>
+				<li>249 _a_ 26, for ϩⲉⲙⲥⲓ read ⲣⲱⲧⲉⲃ.</li>
+				<li>— 17 up, add Ora 4 25 [[S]] ⲛⲟⲩϫⲧ, _ib_ 27 ⲛⲟϫⲧ•.</li>
+				<li>249 _b_ 15 up, ⲛⲉϫⲛⲉϫ ⲁ- [[A^2]] ManiK 220 _take disgust at_ or sim.</li>
+				<li>— 9 up, _l_ ⲛⲟⲩϣⲥ.</li>
+				<li>250 _a_ 16, add MR 5 54 [[F]] ⲟⲩⲛⲁⲧ ⲛⲉϩⲓ _long life_.</li>
+				<li>254 _a_ 7, for ⲱⲧϩ read ⲟⲩⲱⲧϩ.</li>
+				<li>— 31, add name ⲡⲁⲛⲟⲃϩⲉ Bodl ostr 428, Πανόβε ? (Preisigke).</li>
+				<li>254 _b_ 13 up, read</li>
+				<li>	ⲟⲉⲓⲗⲉ (misprinted after 1st proof).</li>
+				<li>255 _a_ 5 up, ϫⲁϫⲟ̣ⲙ̣ⲏ̣ [[S]] ViK 4734 (_ter_) cannot be this word.</li>
+				<li>257 _a_ 12 up, for ⲱⲧϩ read ⲟⲩⲱⲧϩ.</li>
+				<li>257 _b_ _after_ 15 up, add</li>
+				<li>	ⲟϣⲙⲉϥ _v_ ⲱϣⲙ.</li>
+				<li>258 _b_ 11, read Ps.</li>
+				<li>260 _b_ 21, for -ⲧⲉ- read -ⲧⲉ.</li>
+				<li>261 _a_ after 6, add</li>
+				<li>	ⲡⲁⲕ [[S]], _air hole_: MS CaiCoptMus ⲡⲟⲩⲟⲉⲓⲛ…ⲉⲧⲛⲧ[ⲡⲉ ⲙⲡ]ⲡⲁⲕ = C 89 133 [[B]] ⲭⲁⲑⲏⲟⲩ = VaAr172 77 [منور].</li>
+				<li>261 _a_ after 28, add</li>
+				<li>	ⲡⲓⲕⲡⲓϭⲉ [[S]] nn f, meaning unknown: Ostr _penes_ Crum among edibles ⲥⲟⲉ ⲙⲡ.</li>
+				<li>— after 29, add</li>
+				<li>	ⲡⲁⲗⲉ [[S]] nn f, measure of shadow on sundial: MIE 3 580 ff ϯⲉ ⲙⲡ., ⲥⲉⲛⲧⲉ ⲉⲙⲡ., ⲟⲩⲡⲉϣⲡ., ⲟⲩⲡ. ⲛⲟⲩⲱⲧ. _Cf_ ⲧⲁϭⲥⲉ.</li>
+				<li>—15 up, add ⲡⲗⲁⲗⲱⲱⲧ† [[A^2]] ManiH 4.</li>
+				<li>261 _b_ 18 up, read [كان] (Polotsky).</li>
+				<li>262 _b_ 27, add ⲡⲗⲁϫ [[S^f]] Mor 32 41.</li>
+				<li>262 _b_ 10 up, for ⲡ. read ⲫ.</li>
+				<li>264 _a_ 20, read μεθιστ.</li>
+				<li>— 17 up, read [ܐܩܬ׳] (Polotsky).</li>
+				<li>267 _a_ 8. Delete this. ⲡⲁⲣⲁ prob = [براءة].</li>
+				<li>271 _b_ 23, read 14†.</li>
+				<li>272 _b_ 14 up, add Hos 13 15 [[A]] διαστέλλειν (Grossouw).</li>
+				<li>273 _b_ 6, add f [[B]] ⲑ̅ϯ C 43 80.</li>
+				<li>— 8 up, for _long-footed_ read _with well-covered foot_ (Polotsky).</li>
+				<li>276 _b_ after 21 add</li>
+				<li>	#ⲡⲁⲧⲥⲉ# _v_ ⲡⲁϭⲥⲉ</li>
+				<li>— 3 up, Hos 13 12 in BM 729 27 ⲫⲱⲛϩ (Burmester).</li>
+				<li>279 _a_ 11, add P 129^14 84 [[S]] church ⲛⲧⲁⲩⲡⲟϣⲛⲉϥ ⲉⲣⲟⲥ ᾗ ἐχειρ.</li>
+				<li>279 _b_ 12 up, not Sh, but Chrysostom (PG 63 206 ἐπιμαίνεσθαι for both).</li>
+				<li>282 _b_ 2, for [[S]][[F]] read [[S^f]].</li>
+				<li>283 _b_ 18 up. add HM 217 ⲟⲩⲡ. ⲙⲡⲉⲧⲣⲁ = Miss 4 730 ⲡⲁϩϥ _q v_ (281 _a_).</li>
+				<li>285 _a_ 16 & 10 up, ⲡⲉϫⲁ-, ⲡⲉⲧϫⲁϥ [[O]] better.</li>
+				<li>— 14 up, add ⲡⲉϫⲉⲧⲏⲩⲧⲛ P 131^4 126.</li>
+				<li>285 _b_ 24, read [افحج] (Polotsky).</li>
+				<li>— 6 up, ⲡⲟϭⲉ sim in 3 Kg 25 (Mus 50 200), where = ? κατ' εὐθύ.</li>
+				<li>286 _b_ 21, add ⲡⲁϭⲗⲉ [[A^2]] ManiK 57 ⲙⲡ. ⲛⲛϣⲏⲛ..</li>
+				<li>287 _b_ 2, Gk is περὶ τῶν λαληθέντων, Ryl  _Gk & Lat Papyri_ 3 21 6.</li>
+				<li>—19, after ⲣⲏ add φῶς.</li>
+				<li>291 _b_ 16 , delete (?). _V_ Pro 4 20.</li>
+				<li>292 _a_ 9 up, read ⲁϥⲣⲁⲕⲇ (Grossouw).</li>
+				<li>293 _a_ 22 up, read</li>
+				<li>	ⲣⲉⲕⲣⲓⲕⲉ (CSchmidt).</li>
+				<li>295 _a_ 13 up, ⲙⲛⲧⲣⲱⲙⲉ _funeral_ ? (Gunn).</li>
+				<li>299 _a_ 9 up, add ⲟⲩⲣⲱ [[S]] J 108 11.</li>
+				<li>301 _b_ 4, after [[S]] 1° add & PBad 5 376.</li>
+
 			</ul>
 		</div>
 		<div id="dictionary" class="show">
