--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -15,6 +15,9 @@
 					<li id="list_of_abbreviations_tab">List of Abbreviations</li>
 					<li id="additions_and_corrections_tab">Additions and Corrections</li>
 					<li id="dictionary_tab" class="active">Dictionary</li>
+					<li id="english_index_tab">English Index</li>
+					<li id="greek_index_tab">Greek Index</li>
+					<li id="arabic_index_tab">Arabic Index</li>
 				</ul>
 			</div>
 		</header>
@@ -2508,6 +2511,19 @@
 				</li>
 				-->
 			</ul>
+		</div>
+		<div id="english_index">
+			<p>This index is strictly alphabetical, <i>e.g.</i> <i>break</i> and <i>broken</i>, <i>sick</i> and <i>sickness</i> are independent entries.</p>
+			<p>The repeated occurrence of a word in the same column is not indicated.</p>
+			<p>Entries in roman type are those of words not amenable to more precise translation.</p>
+			<p>(<i>Add</i>) indicates Additions and Corrections.</p>
+		</div>
+		<div id="greek_index">
+			<p>More than once occurrence on a page is indicated by an asterisk.</p>
+			<p>(Add) indicates Additions and Corrections.</p>
+		</div>
+		<div id="arabic_index">
+			<p>In strictly alphabetical order. (Add) indicates Additions and Corrections.</p>
 		</div>
 		<script src="./scripts/load_entries.js"></script>
 		<script src="../../scripts/scripts.js"></script>
