--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -559,9 +559,9 @@
 		<div id="additions_and_corrections">
 			<h2>Additions and Corrections</h2>
 			<p><i>a</i>, <i>b</i> refer to columns 1 &amp; 2.</p>
-			<ul>
+			<table>
 				
-			</ul>
+			</table>
 		</div>
 		<div id="dictionary" class="show">
 			<h2>Dictionary</h2>
