--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -2816,9 +2816,60 @@
 		<div id="greek_index">
 			<p>More than once occurrence on a page is indicated by an asterisk.</p>
 			<p>(Add) indicates Additions and Corrections.</p>
+			<table>
+				<tr><td class="term greek">ἆ</td><td class="page">473 a</td></tr>
+				<tr><td class="term greek">ἀβάλα</td><td class="page">473 a</td></tr>
+				<tr><td class="term greek">ἀβαρής</td><td class="page">706 b</td></tr>
+				<tr><td class="term greek">ἄβατος</td><td class="page">18 b &amp; <span class="add">(Add.)</span>, 82 b, 153 b, 203 b, 204 b, 205 b, 610 a, 675 a\*, 746 a</td></tr>
+				<tr><td class="term greek">ἀββᾶ(ς)</td><td class="page">13 a, b, 86 b, 250 b, 251 a</td></tr>
+				<tr><td class="term greek">ἀβλαβής</td><td class="page">164 a, 256 b, 760 b</td></tr>
+				<tr><td class="term greek">ἀβοήθητος</td><td class="page">167 b</td></tr>
+				<tr><td class="term greek">ἀβουλία</td><td class="page">616 a</td></tr>
+				<tr><td class="term greek">ἀβραμίς</td><td class="page">56 b, 108 a, 294 a</td></tr>
+				<tr><td class="term greek">ἁβρός</td><td class="page">195 b</td></tr>
+				<tr><td class="term greek">ἀβρότονον</td><td class="page">196 a</td></tr>
+				<tr><td class="term greek">ἀβροχία</td><td class="page">586 b, 732 a</td></tr>
+				<tr><td class="term greek">ἄβυσσος</td><td class="page">226 b, 227 a\*, 556 a\*</td></tr>
+				<tr><td class="term greek">ἀγαθοποιία</td><td class="page">227 b</td></tr>
+				<tr><td class="term greek">ἀγαθοποιός</td><td class="page">227 b</td></tr>
+				<tr><td class="term greek">ἀγαθός</td><td class="page">11 a, 194 a, 227 a\*, b\*, 240 a, 424 b</td></tr>
+				<tr><td class="term greek">ἀγαθύνειν</td><td class="page">227 b, 485 b\*, 486 a, 490 a</td></tr>
+				<tr><td class="term greek">ἀγαθωσύνη</td><td class="page">227 b, 486 a</td></tr>
+				<tr><td class="term greek">ἀγαλλίαμα</td><td class="page">410 b, 486 a</td></tr>
+				<tr><td class="term greek">ἀγαλλιᾶν</td><td class="page">410 a\*, b\*</td></tr>
+				<tr><td class="term greek">ἀγαλλίασις</td><td class="page">410 b</td></tr>
+				<tr><td class="term greek">ἀγαλλιέλαιον</td><td class="page">410 b</td></tr>
+				<tr><td class="term greek">ἄγαλμα</td><td class="page">276 b, 447 b</td></tr>
+				<tr><td class="term greek">ἄγαμος</td><td class="page">454 a</td></tr>
+				<tr><td class="term greek">ἀγανακτεῖν</td><td class="page">116 a, b, 161 a, 252 b, 823 a\*, b</td></tr>
+				<tr><td class="term greek">ἀγαπᾶν</td><td class="page">156 a\*, b, 500 b, 553 b, 585 b</td></tr>
+				<tr><td class="term greek">ἀγάπη</td><td class="page">156 b</td></tr>
+				<tr><td class="term greek">ἀγάπησις</td><td class="page">156 b</td></tr>
+				<tr><td class="term greek">ἀγαπητός</td><td class="page">156 a, b, 600 b</td></tr>
+				<tr><td class="term greek">ἄγασθαι</td><td class="page">308 b</td></tr>
+				<tr><td class="term greek">ἀγαυριᾶσθαι</td><td class="page">604 a</td></tr>
+				<tr><td class="term greek">ἀγγαρεία</td><td class="page">6 a</td></tr>
+				<tr><td class="term greek">ἀγγαρεύειν</td><td class="page">99 b\*</td></tr>
+				<tr><td class="term greek">ἀγγεῖον</td><td class="page">38 b, 67 a, b, 149 a, 161 b\*, 215 a, 325 a, 692 b</td></tr>
+				<tr><td class="term greek">ἀγγελία</td><td class="page">474 b\*, 569 b</td></tr>
+				<tr><td class="term greek">ἀγγέλλειν</td><td class="page">413 b, 570 a</td></tr>
+				<tr><td class="term greek">ἄγγελος</td><td class="page">295 b, 570 b, 652 b</td></tr>
+				<tr><td class="term greek">ἄγγος</td><td class="page">38 b, 161 b, 692 b</td></tr>
+				<tr><td class="term greek">ἄγειν</td><td class="page">7 b, 78 b\*, 79 a\*, b, 80 a\*, b\*, 128 b, 173 a, 182 b, 325 b, 328 a, 447 b, 481 a, 520 a, b, 521 b, 550 a, 620 a, 748 a, 749 a, b, 750 b, 751 a\*, 786 a\*</td></tr>
+				<tr><td class="term greek">ἀγέλη</td><td class="page">90 b, 258 b</td></tr>
+				<tr><td class="term greek">ἀγενεαλόγητος</td><td class="page">614 b, 770 b</td></tr>
+				<tr><td class="term greek">ἀγερωχία</td><td class="page">571 b</td></tr>
+			</table>
 		</div>
 		<div id="arabic_index">
 			<p>In strictly alphabetical order. (Add) indicates Additions and Corrections.</p>
+			<table>
+				<tr><td class="term arabic">ابدل</td><td class="page">163 a</td></tr>
+				<tr><td class="term arabic">ابراهيم (plant)</td><td class="page">546 a</td></tr>
+				<tr><td class="term arabic">ابرص</td><td class="page">741 a, 386 b</td></tr>
+				<tr><td class="term arabic">ابرميص</td><td class="page">108 a</td></tr>
+				<tr><td class="term arabic">ابرة</td><td class="page">422 b</td></tr>
+			</table>
 		</div>
 		<script src="./scripts/load_entries.js"></script>
 		<script src="../../scripts/scripts.js"></script>
