--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -119,7 +119,7 @@
 							<li><div class="cell"><a href="https://archive.org/details/CopticMartyrdomshighResByEWallisBudgeVol01" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">BMar</span> = Budge, <i>Coptic Martyrdoms</i>, 1914.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">BMEA</span> = British Museum, Dept. of Egyptian &amp; Assyr. Antiquities (papyri, ostraca, inscriptions).</div></li>
 							<li><div class="cell"><a href="https://archive.org/details/miscellaneouscop00budguoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BMis</span> = Budge, <i>Miscellaneous Coptic Texts</i>, 1915.</div></li>
-							<li><div class="cell"></div><div class="cell"><span class="abbr">Bodl</span> = Coptic MSS. in Bodleian, as (P) a 1 <i>e</i>, where italic = folio.</div></li>
+							<li><div class="cell">d 54 <a href="https://digital.bodleian.ox.ac.uk/objects/e38aecdc-377e-427c-964b-a7fa337bfea0/" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Bodl</span> = Coptic MSS. in Bodleian, as (P) a 1 <i>e</i>, where italic = folio.</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">Bor</span> = Codex Borgianus (where not printed by Zoega).</div></li>
 							<li><div class="cell"></div><div class="cell"><span class="abbr">BP</span> = Papyri &amp; ostraca in Staatsmuseum, Berlin.</div></li>
 							<li><div class="cell"><a href="https://books.google.com/books/about/Gnostische_Schriften_in_koptischer_Sprac.html?id=6nOKxgEACAAJ" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Br</span> = <i>Gnostische Schr. in Kopt. Sprache</i> (Pap. Bruce), ed. C. Schmidt, 1892.</div></li>
